fix: too much whitespace

--- a/linkerd.io/assets/scss/styles.scss
+++ b/linkerd.io/assets/scss/styles.scss
@@ -364,6 +364,14 @@
       max-width: 768px;
       margin: 0px auto 70px 90px !important;
 
+      @include until($desktop) {
+        margin: 0px auto 70px 20px !important;
+        width: 95%;
+        padding-right: 20px;
+        box-sizing: border-box;
+      }
+    
+
       .breadcrumb {
         font: 18px/22px roboto;
       }
